# stripe-backend-clone

./: Cargo.toml  README.md
migrations/: 20260629111607_create_users_table.sql  20260629122631_create_products_table.sql  20260629123106_create_prices_table.sql  20260630085437_create_payment-intents_table.sql  20260630115355_create_subscription_table.sql
src/: main.rs
src/auth/: jwt.rs  mod.rs  signin.rs
src/config/: config.rs
src/errors/: errors.rs
src/helpers/: passwords.rs
src/products/: products.rs
src/subscriptions/: subscriptions.rs
