[package]
name = "stripeClone"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = {version = "0.8.9", features = ["macros"]}
axum-extra = { version = "0.12.6", features= ["cookie"]}
chrono = "0.4.45"
jsonwebtoken = "10.4.0"
rand_core = { version = "0.9", features = ["os_rng"] }
serde = "1.0.228"
serde_json = "1.0.150"
sqlx = { version = "0.8", features = [
    "runtime-tokio",     
    "postgres",          
    "tls-native-tls",
    "uuid"  
] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
uuid = {version = "1.23.4", features = ["v4"] }
